--- a/README.adoc
+++ b/README.adoc
@@ -3,7 +3,7 @@
 # My Project Completion
 
 ## Screenshots
-![alt text](https://imgur.com/nO8NtCw)
+![alt text]([img]https://i.imgur.com/nO8NtCw.jpg?1[/img])
 ![alt text](https://i.imgur.com/nO8NtCw.jpg?1)
 
 _______________________________________________________________________________________________________________________________
