--- a/README.adoc
+++ b/README.adoc
@@ -4,6 +4,7 @@
 
 ## Screenshots
 ![alt text](https://i.imgur.com/nO8NtCw.jpg)
+![alt text](https://imgur.com/uEpMgeD)
 
 _______________________________________________________________________________________________________________________________
 
