--- a/README.adoc
+++ b/README.adoc
@@ -4,8 +4,7 @@
 
 ## Screenshots
 ![alt text](https://i.imgur.com/nO8NtCw.jpg)
-![alt text](https://imgur.com/uEpMgeD)
-
+![alt text](https://i.imgur.com/uEpMgeD.jpg?1)
 _______________________________________________________________________________________________________________________________
 
 ## Project Overview
