--- a/README.adoc
+++ b/README.adoc
@@ -49,4 +49,5 @@ ________________________________________________________________________________
 # Completed
 
 ## Screenshots
-![alt text](https://preview.ibb.co/fEbn08/Screenshot_20180610_011128.png) ![alt text](https://i.imgur.com/uEpMgeD.jpg?1)
+
+![alt text](https://i.imgur.com/gPannuU.jpg?1) ![alt text](https://i.imgur.com/uEpMgeD.jpg?1)
