--- a/README.adoc
+++ b/README.adoc
@@ -44,4 +44,4 @@ Make a single GitHub repo with your code for the app and submit it through the N
 For detailed information on how your project will be assessed, see the Rubric node.
 
 ## Completed
-![alt text](https://i.imgur.com/gPannuU.jpg?1) ![alt text](https://i.imgur.com/uEpMgeD.jpg?1)
+![alt text](https://i.imgur.com/gPannuU.jpg?1) ![alt text](https://i.imgur.com/qCgdkAs.jpg?1)
